# actor-experiment

./: README.md  pyproject.toml  sample.txt
actor_experiment/: cli.py  words.py
