[tool.poetry]
name = "actor-experiment"
version = "0.1.0"
description = ""
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pykka = "^4.0.1"
click = "^8.1.7"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[tool.poetry.scripts]
nngm2023 = 'actor_experiment.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
